edge/2a-argo-ui-http.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: 'argo-ui-vs'
  namespace: 'gloo-system'
spec:
  virtualHost:
    domains:
    - 'argocd.kapoozi.com'
    routes:
    - matchers:
       - prefix: '/argo'
      routeAction:
        single:
          upstream:
            name: 'argocd-argocd-server-80'
            namespace: 'gloo-system'
      options:
        prefixRewrite: '/argo'
    - matchers:
       - prefix: '/'
      routeAction:
        single:
          upstream:
            name: 'argocd-argocd-server-80'
            namespace: 'gloo-system'
